--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "nuxt": "^3.12.4",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
     "vue": "latest"
   },
   "devDependencies": {
